--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -9,7 +9,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:textSize="16sp"
+        android:textSize="12sp"
+        android:fontFamily="@font/poppins_regular"
+        android:includeFontPadding="false"
         tools:text="22" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
