--- a/app/src/main/res/layout/calendar_day_title_text.xml
+++ b/app/src/main/res/layout/calendar_day_title_text.xml
@@ -1,10 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center" />
-</LinearLayout>
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="0dp"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:gravity="center"
+    android:textSize="12sp"
+    android:textColor="@color/black"
+    android:fontFamily="@font/poppins_semi_bold"
+    android:includeFontPadding="false"/>
