--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -36,6 +36,8 @@
         app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     <LinearLayout
+        android:layout_marginTop="25dp"
+        android:paddingHorizontal="20dp"
         android:id="@+id/linearLayout5"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -57,6 +59,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20dp"
         android:id="@+id/recycler_calendar"
         android:layout_width="match_parent"
         android:layout_height="0dp"
