--- a/app/src/main/res/layout/activity_main_menu.xml
+++ b/app/src/main/res/layout/activity_main_menu.xml
@@ -24,6 +24,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/bottom_nav"
-        android:background="@color/white"/>
+        android:background="@drawable/bottom_drawer_background"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
